[tool.poetry]
name = "continuousrl"
version = "0.1.0"
description = "Adventures in RL with continuous action spaces"
authors = ["Anirudh Shankar <anirudhshankar99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
